fix misaligned columns / horizontal scroll in table header

--- a/atf_eregs/static/regulations/css/less/typography.less
+++ b/atf_eregs/static/regulations/css/less/typography.less
@@ -587,14 +587,25 @@ thead {
 }
     
 .table-wrap {
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch; // smoother scrolling        
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch; // smoother scrolling
 }
+
 /*
     Datatables-specific css
 */
+
+div.dataTables_wrapper {
+    float:left;
+}
+
+div.dataTables_scroll {
+    overflow-x:scroll;
+}
+
 .dataTable {
     table& {
+        font-family: "Avenir Next Demi", Arial, sans-serif;
         margin-top:0;
         thead {
             height:0;
